group lesson -> cello ensemble

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 							</ul>
 						</section>
 						<section>
-							<h3>group lessons</h3>
-							<p>Group lessons are fun and interactive! It is always a lively time with emphasis on learning and cooperation with other musicians. Kuala Lumpur's favorite type of lesson.</p>
+							<h3>cello ensemble</h3>
+							<p>The cello ensemble offers an opportunity to explore the range of the cello while at the same time honing your skills as a musician alongside others.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
