solo/ensemble lessons update contact

--- a/about.html
+++ b/about.html
@@ -2,10 +2,15 @@
 
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Gerald's Cello</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- <link rel="icon" type="image/x-icon" href="https://irp.cdn-website.com/7cfacb04/site_favicon_16_1660328271177.ico"> -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 	</head>
 	<body class="is-preload">
 
@@ -35,8 +40,9 @@
 							experienced instructor and mentor at your disposal</p>
 						</header>
 						<a href="index.html" class="image fit"><img src="images/orchestra.jpeg" alt="" /></a>
-						<p>I AM SORRY BUT I CAN NOT FILL THIS PART IN WITHOUT KNOWING WHAT YOU WANT. TRY AND THINK OF SOMETHING TO SAY ABOUT YOURSELF AND YOUR EXPERIENCES AND HOW THAT IS A GOOD THING FOR A TEACHER TO HAVE. THE REST OF THE WORDS ARE JUST LATIN FILLER.Quis nibh justo ac vis enim. In interdum amet placerat lorem ac faucibus mi aliquet integer accumsan massa curae curae quam ornare iaculis orci arcu lobortis. Ut ut at amet accumsan lacinia ut porttitor aliquam enim. Faucibus porttitor commodo commodo amet ac. Odio mi. Primis aliquet adipiscing arcu ut vel. Interdum adipiscing commodo vis adipiscing ullamcorper amet blandit nunc commodo. Ac nibh blandit consectetur ac. Ante ornare commodo tempus accumsan turpis non blandit lorem.</p>
-						<p>Adipiscing mi vel non aliquam accumsan accumsan non nisl amet eleifend accumsan. Odio odio vis placerat. Commodo lobortis integer cras nascetur ac posuere adipiscing. Odio at non. Mi enim adipiscing faucibus aliquet. Primis sed arcu turpis. Nunc ac ac placerat ante nunc accumsan amet adipiscing faucibus tempor accumsan. Arcu arcu penatibus ac lobortis cep. A ac. Arcu accumsan a adipiscing. Accumsan lorem id accumsan. Adipiscing ac elementum placerat ac lacinia. Ante aliquam natoque placerat orci faucibus mi massa mi arcu accumsan commodo nascetur accumsan. Lobortis massa placerat lacinia nunc varius massa blandit tincidunt nisl ipsum accumsan. Lobortis amet mi lorem accumsan praesent turpis lobortis mi tempus vis porttitor. Interdum adipiscing non mi eu tempus accumsan lacus nunc fusce lorem ullamcorper adipiscing adipiscing id ornare condimentum lobortis.</p>
+						<p>I am a professional cellist who has been playing for the past 30 years. I am from England and I now live in the Kuala Lumpur. I give cello lessons to students of all ages and levels. I love teaching and helping my students improve their skills.</p>
+						<p>I have been playing the cello since I was eight years old. I started taking lessons from a local cello teacher and then went on to study at the Royal Academy of Music in London. After I graduated, I moved to the Malaysia to pursue my career as a professional cellist. I have been playing with the Malaysian Philharmonic Orchestra for the past twenty years, and I enjoy performing before an audience.</p>
+						<p>I feel alive when I am playing the cello and I love sharing my passion for music with my students. I am always striving to improve my own playing and to find new ways to help my students reach their potential. I believe that everyone has the ability to learn and enjoy playing the cello, and I am dedicated to helping my students achieve their musical goals.</p>
 					</section>
 
 				<!-- Two -->
@@ -45,24 +51,24 @@
 							<h3>solo lessons</h3>
 							<p>Giving the highest quality of time between gerald and the student. These lessons are focused and intense. This is the best way to improve your cello skills in Kuala Lumpur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="soloLesson.html" class="button">More</a></li>
 							</ul>
 						</section>
 						<section>
 							<h3>cello ensemble</h3>
 							<p>The cello ensemble offers an opportunity to explore the range of the cello while at the same time honing your skills as a musician alongside others.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="ensemble.html" class="button">More</a></li>
 							</ul>
 						</section>
 					</section>
 
 				<!-- Footer -->
 					<section id="footer">
-						<h2>Contact Us</h2>
-						<p>Cubilia in ornare mi. Accumsan massa vis vis commodo lorem ipsum.<br />
-						Adipiscing amet odio id consectetur penatibus accumsan adipiscing.</p>
-						<form action="#" method="post">
+						<h2>Contact Form</h2>
+						<p>To enquire about availability or to request additional information, <br />
+						fill out this form and I will respond to you soon.</p>
+						<form name="contact-about" method="post" data-netlify="true">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-6 col-12-xsmall">
 									<input type="text" name="name" id="name" placeholder="Name" />
@@ -84,11 +90,11 @@
 							</div>
 						</form>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="https://wa.me/60142945817?text=Hello!!%20I'm%20interested%20in%20booking%20a%20lesson%20with%20you." class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 						</ul>
 					</section>
 
