--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 							<h3>solo lessons</h3>
 							<p>Giving the highest quality of time between gerald and the student. These lessons are focused and intense. This is the best way to improve your cello skills in Kuala Lumpur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="soloLesson.html" class="button">More</a></li>
 							</ul>
 						</section>
 						<section>
 							<h3>cello ensemble</h3>
 							<p>The cello ensemble offers an opportunity to explore the range of the cello while at the same time honing your skills as a musician alongside others.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="ensemble.html" class="button">More</a></li>
 							</ul>
 						</section>
 					</section>
@@ -70,24 +70,24 @@
 							the best choice in Kuala Lumpur</p>
 						</header>
 						<section class="left">
-							<a href="#" class="image"><img src="images/orchastra-cello.jpeg" alt="" /></a>
+							<a href="about.html" class="image"><img src="images/orchastra-cello.jpeg" alt="" /></a>
 							<div class="content">
 								<h3>Gerald</h3>
 								<p>Gerald has been working the strings of a cello for over 30 years. He has experience playing in orchestras around the world including the Malaysian Philharmonic Orchestra, Kuala Lumpur's resident orchestra.</p>
 							</div>
 						</section>
 						<section class="right">
-							<a href="#" class="image"><img src="images/sheet-music.jpeg" alt="" /></a>
+							<a href="contact.html" class="image"><img src="images/sheet-music.jpeg" alt="" /></a>
 							<div class="content">
 								<h3>All of the classics</h3>
 								<p>We have access to a vast library of music and techniques for students just starting to experienced musicians wanting to expand their knowledge.</p>
 							</div>
 						</section>
 						<section class="left">
-							<a href="#" class="image"><img src="images/music-war.jpeg" alt="" /></a>
+							<a href="contact.html" class="image"><img src="images/cello-on-bike.jpeg" alt="" /></a>
 							<div class="content">
-								<h3>comfortable room</h3>
-								<p>You don't have to learn or hone your skills in discomfort. We provide an amazing location that is convient and comfortable.</p>
+								<h3>convient location</h3>
+								<p>The studio is centrerally located in Ampang and is easily reached from most places in and around Kuala Lumpur. This means you don't have to cary your instrument across town.</p>
 							</div>
 						</section>
 						<footer class="major">
@@ -104,7 +104,7 @@
 						<h2>Questions?</h2>
 						<p>If you have any questions about scheduling or lessons<br />
 						don't hesitate to get in touch. Simply fill out the form below and I will get back to you.</p>
-						<form action="#" method="post">
+						<form name="main-contact" method="post" data-netlify="true">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-6 col-12-xsmall">
 									<input type="text" name="name" id="name" placeholder="Name" />
@@ -126,11 +126,11 @@
 							</div>
 						</form>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 							<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-							<li><a href="https://wa.me/601117654300?text=Hello!!%20I'm%20interested%20in%20booking%20a%20lesson%20with%20you." class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+							<li><a href="https://wa.me/60142945817?text=Hello!!%20I'm%20interested%20in%20booking%20a%20lesson%20with%20you." class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 						</ul>
 					</section>
 
