--- a/soloLesson.html
+++ b/soloLesson.html
@@ -18,33 +18,35 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<section id="header">
+					<section id="header" class="alt">
 						<header>
-							<h1><a href="about.html">Cello House</a></h1>
+							<h1><a href="index.html">Cello House</a></h1>
 							<p>By Gerald</p>
 						</header>
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">Full Story</a></li>
-								<!-- <li><a href="elements.html">Elements</a></li> -->
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 					</section>
 
-				<!-- Banner -->
-					<section id="banner">
-						<h2>A lifetime of<br />
-						music and experience<br />
-						brought to you<br />
-						in a personalized format.</h2>
-						<ul class="actions special">
-							<li><a href="about.html" class="button large">Full Story</a></li>
-						</ul>
+				<!-- One -->
+					<section class="main">
+						<header class="major">
+							<h2>Solo Lessons</h2>
+							<p>Enjoy exlusivity and one-on-one mentoring.<br />
+							Move at your own pace and ask all the questions you want.</p>
+						</header>
+						<a href="index.html" class="image fit"><img src="images/cello-solo-lesson.jpeg" alt="" /></a>
+						<p>A solo cello lesson is a lesson in which a student works one-on-one with a cello teacher. The student and teacher work together to improve the student's technique and musicianship. They very in length and frequency depending on the needs of the student.</p>
+						<p>The best part about a solo cello lesson is the close relationship that is formed between the student and teacher. The teacher is able to get to know the student's strengths and weaknesses, and tailor the lessons to their individual needs. As the student progresses, the teacher is able to help them reach their musical goals.</p>
+                        <p> Students should take solo lessons if they want to improve their cello playing and reach their musical potential. The solo lessons are best for students who want to focus on their technique and musicianship.</p>
 					</section>
 
-				<!-- One -->
-					<!-- <section class="main style1">
+				<!-- Two -->
+					<section class="main style1">
 						<section>
 							<h3>solo lessons</h3>
 							<p>Giving the highest quality of time between gerald and the student. These lessons are focused and intense. This is the best way to improve your cello skills in Kuala Lumpur.</p>
@@ -53,47 +55,12 @@
 							</ul>
 						</section>
 						<section>
-							<h3>group lessons</h3>
-							<p>Group lessons are fun and interactive! It is always a lively time with emphasis on learning and cooperation with other musicians. Kuala Lumpur's favorite type of lesson.</p>
+							<h3>cello ensemble</h3>
+							<p>The cello ensemble offers an opportunity to explore the range of the cello while at the same time honing your skills as a musician alongside others.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="ensemble.html" class="button">More</a></li>
 							</ul>
 						</section>
-					</section> -->
-
-				<!-- Two -->
-					<section class="main style2">
-						<header class="major">
-							<h2>Cello House,<br />
-							Kuala Lumpur's choice</h2>
-							<p>Gerald's Cello House<br />
-							the best choice in Kuala Lumpur</p>
-						</header>
-					
-						<section class="left">
-							<a href="#" class="image"><img src="images/clock.jpeg" alt="" /></a>
-							<div class="content">
-								<h3>Bookings</h3>
-								<p>To book a private or group lesson, please send a message or a WhatsApp. I try hard to make sure all of my students prefered times are accomodated, and I am sure that we can find a time that works for everyone.</p>
-							</div>
-						</section>
-
-						<section class="right">
-							<a href="https://g.page/expatcarsaleskl?share" class="image"><img src="images/google-maps-cello-house.png" alt="location" /></a>
-							<div class="content">
-								<h3>convenient location</h3>
-								<p>Cello House is conveniently located in Ampang, Kuala Lumpur. If you need help getting to our location, please feel free to contact me and I can help you arrive safely.</p>
-							</div>
-						</section>
-
-						<footer class="major">
-							<p>Excited to get started?<br />
-							Fill out the form or click the button!</p>
-							<ul class="actions special">
-								<li><a href="https://wa.me/60142945817?text=Hello!!%20I'm%20interested%20in%20booking%20a%20lesson%20with%20you." class="button large">WhatsApp Me!<i class="icon brands fa-whatsapp"></i></a></li>
-                              
-							</ul>
-						</footer>
 					</section>
 
 				<!-- Footer -->
@@ -101,7 +68,7 @@
 						<h2>Contact Form</h2>
 						<p>To enquire about availability or to request additional information, <br />
 						fill out this form and I will respond to you soon.</p>
-						<form name="contact" method="POST" data-netlify="true">
+						<form name="contact-solo" method="post" data-netlify="true">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-6 col-12-xsmall">
 									<input type="text" name="name" id="name" placeholder="Name" />
@@ -134,9 +101,9 @@
 			</div>
 
 		<!-- Copyright -->
-        <div id="copyright">
-            &copy; Cello House. All rights reserved.
-        </div>
+		<div id="copyright">
+			&copy; Cello House. All rights reserved.
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
