--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 						</section>
 
 						<section class="right">
-							<a href="https://g.page/expatcarsaleskl?share" class="image"><img src="images/google-maps-cello-house.png" alt="location" /></a>
+							<a href="https://goo.gl/maps/Z14MRSvB7zN7vLS8A" class="image"><img src="images/google-maps-cello-house.png" alt="location" /></a>
 							<div class="content">
 								<h3>convenient location</h3>
 								<p>Cello House is conveniently located in Ampang, Kuala Lumpur. If you need help getting to our location, please feel free to contact me and I can help you arrive safely.</p>
